# ws-chat

./: db.sqlite  diesel.toml  replit.nix  server_bin
client/: Cargo.toml
migrations/2022-02-24-032229_create_user/: up.sql
server/: Cargo.toml
server/src/: main.rs  types.rs
server/src/commands/: example.rs  mod.rs  say.rs
server/src/db/: mod.rs  model.rs  scheme.rs
src/: schema.rs
src/db/: scheme.rs
