[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["sync", "net", "rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.17.1"
anyhow = "1.0.55"
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"]}
futures-util = {version = "0.3.21", default-features = false }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }