[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.5", features = ["sync", "net", "rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.17.1"
anyhow = "1.0.55"
serde_json = "1.0.79"
serde = {version = "1.0.136", features = ["derive"]}
futures-util = {version = "0.3.21", default-features = false }
diesel = { version = "1.4.8", features = ["sqlite"] }
bb8-diesel = "0.2.1"
bb8 = "0.7.1"
libsqlite3-sys = {version = "0.22.2", features = ["bundled"]}
fnv = "1.0.7"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }
